# SoftwareRendererTGA

./: .gitignore  CMakeLists.txt  README.md  image.ppm
JumaGFX_CMake/: CMakeLists.txt  JumaGFX_CMake.cpp  JumaGFX_CMake.h
Rasterizer/: .gitignore  CMakeLists.txt
Rasterizer/images/: P1output.tga  P2output.tga  P3output.tga  P4output.tga  P5output.tga  depth216.tga  depth219.tga  depth220.tga  depth225.tga  depth228.tga  depth233.tga  depth234.tga  depth235.tga  depth237.tga  depth243.tga  depth244.tga  depth245.tga  depth247.tga  depth249.tga  depth252.tga  depth279.tga  depth283.tga  depth285.tga  output.tga  output102.tga  output103.tga  output105.tga  output107.tga  output127.tga  output146.tga  output147.tga  output149.tga  output150.tga  output152.tga  output153.tga  output155.tga  output156.tga  output167.tga  output189.tga  output191.tga  (+59 more)
Rasterizer/models/: duoranger_diffuse.tga
Rasterizer/src/: geometry.cpp  geometry.h  main.cpp  model.cpp  openGL.cpp  openGL.h  precompiledheaders.h  shapes.cpp  shapes.h
Rasterizer/src/Discontinued/: shapes.cpp  shapes.h
Rasterizer/src/extra/: runfile.cpp  runfile.h
cpp2ppm_CMake/images/: image3.ppm  image_MAC.ppm
images/: image.ppm
